fixed scrollbar @1500px and vh genres

--- a/src/pages/categories_page/styles.module.scss
+++ b/src/pages/categories_page/styles.module.scss
@@ -135,7 +135,7 @@
       .wrapper{
         width: 100%;
         justify-content: flex-start;
-        height: 50vh;
+        height: 65vh;
         box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
       }
 
