--- a/src/pages/single_artist/styles.module.scss
+++ b/src/pages/single_artist/styles.module.scss
@@ -216,17 +216,17 @@
         }
       }
 
-      .container_Content::-webkit-scrollbar {
+      .Content::-webkit-scrollbar {
         display: flex;
         width: 10px;
       }
       
-      .container_Content::-webkit-scrollbar-thumb {
+      .Content::-webkit-scrollbar-thumb {
         background-color: #52005f;
         border-radius: 10px;
       }
       
-      .container_Content::-webkit-scrollbar-track {
+      .Content::-webkit-scrollbar-track {
         background-color: #2B1B33;
         border-radius: 10px;
       }
